# llm-notify-mcp

./: .gitignore  MCP_SETUP.md  README.md  TODO.md  VOICE_GUIDE.md  hello.py  pyproject.toml  ruff.toml
src/llm_notify_mcp/: __init__.py  cli.py  client.py  config.py  mcp_server.py  server.py
tests/: test_client.py  test_config.py  test_server.py
